styles/Home.module.css
.container {
  padding: 0rem 1vw;
  background-color:  	 	#394955;
  width: 100%;
  max-width: 100%;
  overflow-x: scroll; 
  font-size: 3.2vw;
  
  /* background-color:steelblue;
  opacity: 0.8; */
}

.modal {
  /* padding: 0rem 1vw; */
  /* background-color:  	 	#394955;
  max-width: 40vw; */
  /* background-color:steelblue;
  opacity: 0.8; */
}



.curvedEdge {
  border-radius :20px;
}

.modal {
	position: absolute;
	inset: 40px;
	border: 1px solid rgb(204, 204, 204);
	background: grey;
	overflow: auto;
	border-radius: 4px;
	outline: none;
	padding: 10px;
}

.right {
  float: right
}

.bordered {
  border-color: black;
  border-width: 0.25rem;
  border-style: solid;
}

.centered {
  text-align: center;
  align-items: center;
  justify-content: center;
  display: grid;
}

.cardGroup{
  display: -webkit-flex;
  display: flex;
  flex-wrap: wrap;
}

.main {
  border-radius: 0rem 0rem 1rem 1rem;
  min-height: 100vh;
  font-size: 1.7cqw;
  padding: 2rem 2rem;
  flex: 1;
  /* display: flex; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* background-color: #394955; */
  color: white
  
}


.main_flex {
  border-radius: 1rem;
  min-height: 100vh;
  padding: 2rem 2rem;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  
  
}




.footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.title,
.description {
  text-align: center;
}

.description {
  margin: 4rem 0;
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  max-width: 300px;
  
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

.tr {
}

.td{
  padding: 0.5rem;
  background-color: white;
  font-size: 2cqw;
  flex-direction: column; 
  text-align: center;
  vertical-align: middle;
}

.col{
  padding: 0.5rem;
  flex-direction: column; 
  text-align: center;
  vertical-align: middle;
  align-items: center;
  justify-content: center;
  display: grid;
  width: 10vw;
}


.th{
  padding: 0.5rem;
  background-color: #1C2640;
  font-size: 1.8cqw;
  flex-direction: column; 
  text-align: center;
  vertical-align: middle;
  color:white;
  overflow: hidden  
}

